Styling for the home page added

--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
         </div>
         <!-- Get to know section -->
         <div class="intro">
-            <h2>We are AWiA.</h2>
+            <h2>We are <span>AWiA</span>.</h2>
             <p>Women farmers are faced with challenges in the agricultural market: the make up a significant portion of the agricultural labour force, constituting an average of 43 percent in developing contries; making up approximately 50 percent in Sub-Saharan Africa. However, the farmers are often faced with challenges when trying to access teh agricultural market.</p>
             <p>Women have limited access to finance, agricultural input such as seeds, farming implements and transport. They are impacted by a lack of agricultural skills and infrastructure and the majority of them are involved in small-scaled farming due to limited resources. They additionally have limited knowledge and use of farming technologies.</p>
             <p>AWiA would like to close this gap in knowledge and resources by empowering women. Hence, our vision is:</p>
             <div>
-                <h3>To capacitate women's access to the agri-ecosystem, driving socio economic impact through disruptive virtua; and physical communities.</h3>
+                <h3>To capacitate women's access to the agri-ecosystem, driving socio economic impact through disruptive virtual and physical communities.</h3>
             </div>
         </div>
         <div class="footer">
             <footer>
                 Coded by:
-                <a href="http://" target="_blank">Philisizwe Kuzwayo</a>
+                <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/" target="_blank">Philisizwe Kuzwayo</a>
                 for
-                <a href="http://" target="_blank">AWiA</a>
+                <a href="https://www.linkedin.com/company/african-women-in-agriculture-awia/" target="_blank">AWiA</a>
                 is hosted on 
-                <a href="http://" target="_blank">Github</a>
+                <a href="https://github.com/PKuzi01/awia-demo-site-ppk" target="_blank">Github</a>
                 <br>
-                This for demonstrative purposes only
+                This is for demonstrative purposes only
             </footer>
         </div>
     </div>
