--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg sticky-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">AWiA</a>
+              <a class="navbar-brand" href="index.html">AWiA</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="about.html">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="projects.html">Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Meet the Team</a>
+                    <a class="nav-link" href="meet.html">Meet the Team</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
