--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,9 @@
               </div>
             </div>
           </nav>
+
+         <!-- Banner -->
+         <div class="banner"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="./src/script.js"></script>
