Content for about page

--- a/about.html
+++ b/about.html
@@ -43,6 +43,27 @@
           </nav>
         <!-- Banner -->
         <div class="banner"></div>
+
+        <!-- Introduction -->
+        <div class="about-info">
+          <h2>About <span>AWiA</span>.</h2>
+          <p>African Women in Agriculture, otherwise known as AWiA, is a Non-Profit Company with a vision to capacitate women in agribusiness. We are involved in a number of projects, including the Lwazi Agripreneur Incubator, our flagship and isiVuno, a programme for small-scale and home food farmers.</p>
+
+          <p>We're committed to starting and growing a robust community within the emerging farmer ecosystem in Africa. That's a big statement for a small organisation, but we embrace partnerships and collaboration and welcome conversations.</p>
+
+          <h3>Our <span>WHY</span>:</h3>
+          <ul>
+            <li>Empower women</li>
+            <li>Give women access</li>
+            <li>Create change</li>
+            <li>Impact hunger and poverty</li>
+            <li>Give back to the community</li>
+            <li>Make a difference</li>
+            <li>Create a new model</li>
+            <li>Drive aspiration</li>
+            <li>Create an ecosystem</li>
+          </ul>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
