--- a/about.html
+++ b/about.html
@@ -64,6 +64,20 @@
             <li>Create an ecosystem</li>
           </ul>
         </div>
+
+        <!-- Footer -->
+        <div class="footer">
+          <footer>
+              Coded by:
+              <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/" target="_blank">Philisizwe Kuzwayo</a>
+              for
+              <a href="https://www.linkedin.com/company/african-women-in-agriculture-awia/" target="_blank">AWiA</a>
+              is hosted on 
+              <a href="https://github.com/PKuzi01/awia-demo-site-ppk" target="_blank">Github</a>
+              <br>
+              This is for demonstrative purposes only
+          </footer>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
