--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Get to know section -->
         <div class="intro">
             <h2>We are <span>AWiA</span>.</h2>
-            <p>Women farmers are faced with challenges in the agricultural market: the make up a significant portion of the agricultural labour force, constituting an average of 43 percent in developing contries; making up approximately 50 percent in Sub-Saharan Africa. However, the farmers are often faced with challenges when trying to access teh agricultural market.</p>
+            <p>Women farmers are faced with challenges in the agricultural market: the make up a significant portion of the agricultural labour force, constituting an average of 43 percent in developing contries; making up approximately 50 percent in Sub-Saharan Africa. However, the farmers are often faced with challenges when trying to access the agricultural market.</p>
             <p>Women have limited access to finance, agricultural input such as seeds, farming implements and transport. They are impacted by a lack of agricultural skills and infrastructure and the majority of them are involved in small-scaled farming due to limited resources. They additionally have limited knowledge and use of farming technologies.</p>
             <p>AWiA would like to close this gap in knowledge and resources by empowering women. Hence, our vision is:</p>
             <div>
