--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                 <h3>To capacitate women's access to the agri-ecosystem, driving socio economic impact through disruptive virtual and physical communities.</h3>
             </div>
         </div>
+
+        <!-- Footer -->
         <div class="footer">
             <footer>
                 Coded by:
