Content and styling for projects page

--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,36 @@
          <!-- Banner -->
          <div class="banner"></div>
 
+         <!-- Projects Info -->
+         <div class="projects-info">
+          <h1>Projects in progess...</h1>
+          <div class="projects">
+            <h2>Women armed with tenacity</h2>
+            <p>As a group of women seasoned win entrepreneurship, with a passion for agriculture, the founding cohort believed that we could make an impact in this space. The founders were determined that the focus be agri-business. Armed with tenacity and belief, AWiA was founded in 2018. In the two-plus years since our incorportaion, we've discovered that the tenacity is an absolute requirement. We've also learned that gathering the right people around this organisation is key.</p>
+          </div>
+          <div class="projects">
+            <h2>Projects:</h2>
+            <ul>
+              <li>
+                LWAZI - An incubator for 48 young women over three years where organic growing, hydroponics and the business of farming will be learned.
+              </li>
+              <li>
+                An organic vegetable garden on the land of a children's home where AWiA's first agripreneur was trained. Area: =/+ 1ha.
+              </li>
+              <li>
+                The inception of a virtual community of service providers for emerging farmers.
+              </li>
+              <li>
+                A cotton incubator in Limpopo in teh early stages of a business plan.
+              </li>
+              <li>
+                isiVuno - A female farmer empowerment programme aimed at changing the narraative of poverty and hunger through a 3 day course on topics such as pyramid gardening, rain harvesting, composting, and crop planning. Includes the course material, an Amaveggie Pyramid, 100 seedlings, topsoil and compost.
+              </li>
+              <li>Grow 4 Good - A programme that allows for participants to help the planting and growth of trees at the AWiA farm in Eikenhof, South of Johannesburg, to help combat CO2 emissions. Partnered with EcoForce.</li>
+            </ul>
+          </div>
+         </div>
+
          <!-- Footer -->
          <div class="footer">
           <footer>
