Added span in h1 + styling

--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 
          <!-- Projects Info -->
          <div class="projects-info">
-          <h1>Projects in progess...</h1>
+          <h1>Projects in <span>progress</span>...</h1>
           <div class="projects">
             <h2>Women armed with tenacity</h2>
             <p>As a group of women seasoned win entrepreneurship, with a passion for agriculture, the founding cohort believed that we could make an impact in this space. The founders were determined that the focus be agri-business. Armed with tenacity and belief, AWiA was founded in 2018. In the two-plus years since our incorportaion, we've discovered that the tenacity is an absolute requirement. We've also learned that gathering the right people around this organisation is key.</p>
