Meet us page content and styling added

--- a/meet.html
+++ b/meet.html
@@ -45,6 +45,31 @@
          <!-- Banner -->
          <div class="banner"></div>
 
+         <!-- Meet Info -->
+         <div class="meet-team-info">
+          <h1>Meet the team:</h1>
+          <div class="profile">
+            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/439/original/Sibo-Cele.jpg?1692034473" alt="Sibongile Cele" class="col-4">
+            <h3 class="col-8">Sibongile Cele</h3>
+            <p>Sibongile Cele holds a qualification as a Commercial and Financial Accountant (CFA.SA). Her experience in the corporate world started at the Deloitte & Touche in 1992 where she trained as an accountant and an auditor. This is where she developed her interpersonal skill with clients and the acquired bussines management skills. She later moved to Kwenta Media as the finacial manager for the Mamas & Papas magazine.</p>
+            <p>In 2013, she founded and is the current chairperson of a group of companies under the name "Mcebo Group", of which has an array of diverse business activities in agribusiness, mining, petroleum and insurance brokerage, construction, building supply, brick manufacturing as well as a heritage seed bank. </p>
+          </div>
+          <div class="profile">
+            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/440/original/Agnes-Hove.jpg?1692034498" alt="Agnes Hove">
+            <h3>Agnes Hove</h3>
+            <p>Agnes is a seasoned strategist who is currently the Chief Executive Officer of Adge Africa, a Pan-African SME Development, Consulting and Advisory organisation. She possess a Master of Science (MSc) Degree in Strategic Management, a Business Management (BBA) Degree and  Diploma in Nursing. She has management consulting experience in Strategic Planning, Business, Leadership, Finance Coaching, Organisational Development, Strategic and Organisational Planning, Business Process Imporovement, Employee Wellness and the management of Human Capital.</p>
+            <p>Agnes started off her career in the mining industry with Anglo-American and has experience working with Harmony Gold, Pamodzi and a few other smalller mining companies. Agnes has held significant leadership positions such as teh Chief Executive of Careways (Pty) Ltd, a health and wellnes company, and teh Executive Director for a South African on-profit organisation. Agnes sits on the board of Youth for Christ (YFC) SA, AWiA, Adge Africa, Sequor Consulting, and is the currentVice Chairperson of Ibbamo Foundation. She was a board memeber for the SOS Children's Villages, Capernaum Trust and a number of other non-profit organisations.</p>
+          </div>
+          <div class="profile">
+            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/437/original/Vero-Shangali.jpg?1692034058" alt="Veronica Shangali-Aswani">
+            <h3>Veronica Shangali-Aswani</h3>
+            <p>Veronica has a BSc in Business Administration (Cum Laude) and is currently completeing an MBA. She is the Vice President for African Association of Vertical Farming (AAVF) and the Co-Founder and Chief Executive Officer of Wavunow.</p>
+            <p>She has over 13 years' experience in marketing management and operations in multinational, automotive, commodity and property industries acrros southern and east Africa. She co-founded Wavunow in 2013 as a social enterprise to sustainably fight poverty by connecting disadvantaged and underprivileged businesses to global markets, business skills training and potential funding. WIth a passion for addresssing societal imbalances, Veronica also serves on various committees around and reform and urban farming. Veronica is actively involved in seeking Aftican urban farm solutions that will suit smallholder farmers</p>
+          </div>
+         </div>
+
+         <!-- Partners Info -->
+         <div class="partner-info"></div>
          <!-- Footer -->
          <div class="footer">
           <footer>
