Contact page content and styling added

--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,40 @@
          <!-- Banner -->
          <div class="banner"></div>
 
+         <!-- Contact Info -->
+         <div class="contact-info">
+          <h1>Talk to us:</h1>
+          <div class="contacts">
+            <h3>Call:</h3>
+            <a href="tel:+27828185344" target="_blank">+27828185344</a>
+          </div>
+          <div class="contacts">
+            <h3>Email:</h3>
+            <a href="mailto:info@awia.africa" target="_blank">info@awia.africa</a>
+          </div>
+          <div class="contacts">
+            <h3>LinkedIn:</h3>
+            <a href="https://www.linkedin.com/company/african-women-in-agriculture-awia/about/" target="_blank">AWiA (African Women in Agriculture)</a>
+          </div>
+          <div class="contacts">
+            <h3>Facebook:</h3>
+            <a href="https://www.facebook.com/AWiA2018/" target="_blank">African Women in Agriculture - AWiA</a>
+          </div>
+          <div class="contacts">
+            <h3>Instagram:</h3>
+            <a href="https://www.instagram.com/awia.official/" target="blank">awia.official</a>
+          </div>
+          <div class="contacts">
+            <h3>F6S:</h3>
+            <a href="https://www.f6s.com/company/africanwomeninagricultureawia#about">African Women in Agriculture (AWiA)</a>
+          </div>
+          <div class="contacts">
+            <h3>Apollo:</h3>
+            <a href="https://www.apollo.io/companies/African-Women-In-Agriculture--AWIA-/5f4486109baadd000139b4fa">AWiA (African Women in Agriculture)</a>
+          </div>
+            
+         </div>
+
          <!-- Footer -->
          <div class="footer">
           <footer>
