--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 
          <!-- Contact Info -->
          <div class="contact-info">
-          <h1>Talk to us:</h1>
+          <h1>Talk to <span>us</span>:</h1>
           <div class="contacts">
             <h3>Call:</h3>
             <a href="tel:+27828185344" target="_blank">+27828185344</a>
