--- a/meet.html
+++ b/meet.html
@@ -47,7 +47,7 @@
 
          <!-- Meet Info -->
          <div class="meet-team-info">
-          <h1>Meet the team:</h1>
+          <h1>Meet the <span>team</span>:</h1>
           <div class="profile">
             <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/439/original/Sibo-Cele.jpg?1692034473" alt="Sibongile Cele" class="col-4">
             <h3 class="col-8">Sibongile Cele</h3>
